Tabzy Lib Create

--- a/index.html
+++ b/index.html
@@ -295,6 +295,7 @@ tabs.destroy();
             </p>
         </footer>
     </div>
- 
+    <script src="./assets/highlight/highlight.js"></script>
+    <script src="./src/tabzy.js"></script>
 </body>
 </html>
