--- a/index.html
+++ b/index.html
@@ -61,23 +61,28 @@
         <p><strong>1. Basic Tabs Demo</strong></p>
 
         <div class="sample-1">
-            <ul id="fancy-tabs" class="tabzy-tabs">
-                <li><a href="#fancy1">Tab 1</a></li>
-                <li><a href="#fancy2">Tab 2</a></li>
-                <li><a href="#fancy3">Tab 3</a></li>
-                <li><a href="#fancy4">Tab 4</a></li>
-            </ul>
-            <div id="fancy1" class="tabzy-panel">
-                Welcome to Tab 1! This is the first tab.
+            <div class="tabzy-wrapper">
+                <ul id="fancy-tabs" class="tabzy-tabs">
+                    <li><a href="#fancy1">Tab 1</a></li>
+                    <li><a href="#fancy2">Tab 2</a></li>
+                    <li><a href="#fancy3">Tab 3</a></li>
+                    <li><a href="#fancy4">Tab 4</a></li>
+                </ul>
+                <div class="active-line"></div>
             </div>
-            <div id="fancy2" class="tabzy-panel" hidden>
-                Here’s Tab 2 with some cool content.
-            </div>
-            <div id="fancy3" class="tabzy-panel" hidden>
-                Tab 3 is here for you to explore.
-            </div>
-            <div id="fancy4" class="tabzy-panel" hidden>
-                Tab 4 has some unique info.
+            <div class="tabzy-content">
+                <div id="fancy1" class="tabzy-panel">
+                    Welcome to Tab 1! This is the first tab.
+                </div>
+                <div id="fancy2" class="tabzy-panel" hidden>
+                    Here’s Tab 2 with some cool content.
+                </div>
+                <div id="fancy3" class="tabzy-panel" hidden>
+                    Tab 3 is here for you to explore.
+                </div>
+                <div id="fancy4" class="tabzy-panel" hidden>
+                    Tab 4 has some unique info.
+                </div>
             </div>
         </div>
 
@@ -85,30 +90,35 @@
         <p><strong>2. Persistent Tabs Demo</strong></p>
 
         <div class="sample-2">
-            <ul id="persistent-tabs" class="tabzy-tabs">
-                <li><a href="#persist1">News</a></li>
-                <li><a href="#persist2">Sports</a></li>
-                <li><a href="#persist3">Tech</a></li>
-                <li><a href="#persist4">Lifestyle</a></li>
-            </ul>
-            <div id="persist1" class="tabzy-panel">
-                Latest news updates from around the world.
+            <div class="tabzy-wrapper">
+                <ul id="persistent-tabs" class="tabzy-tabs">
+                    <li><a href="#persist1">News</a></li>
+                    <li><a href="#persist2">Sports</a></li>
+                    <li><a href="#persist3">Tech</a></li>
+                    <li><a href="#persist4">Lifestyle</a></li>
+                </ul>
+                <div class="active-line"></div>
             </div>
-            <div id="persist2" class="tabzy-panel" hidden>
-                Top sports highlights and scores.
-            </div>
-            <div id="persist3" class="tabzy-panel" hidden>
-                Latest trends in technology.
-            </div>
-            <div id="persist4" class="tabzy-panel" hidden>
-                Tips for a better lifestyle.
+            <div class="tabzy-content">
+                <div id="persist1" class="tabzy-panel">
+                    Latest news updates from around the world.
+                </div>
+                <div id="persist2" class="tabzy-panel" hidden>
+                    Top sports highlights and scores.
+                </div>
+                <div id="persist3" class="tabzy-panel" hidden>
+                    Latest trends in technology.
+                </div>
+                <div id="persist4" class="tabzy-panel" hidden>
+                    Tips for a better lifestyle.
+                </div>
             </div>
         </div>
 
         <!-- Sample 3 -->
         <p><strong>3. Sliding Line Tabs Demo</strong></p>
 
-        <div class="sample-3">
+        <div class="sample-3 tabzy">
             <div class="tabzy-wrapper">
                 <ul id="sliding-tabs" class="tabzy-tabs sliding">
                     <li><a href="#slide1">Home</a></li>
@@ -118,19 +128,21 @@
                 </ul>
                 <div class="active-line"></div>
             </div>
-            <div id="slide1" class="tabzy-panel">
-                Welcome to the Home tab!
+            <div class="tabzy-content">
+                <div id="slide1" class="tabzy-panel">
+                    Welcome to the Home tab!
+                </div>
+                <div id="slide2" class="tabzy-panel" hidden>
+                    About us and our mission.
+                </div>
+                <div id="slide3" class="tabzy-panel" hidden>
+                    Our services in detail.
+                </div>
+                <div id="slide4" class="tabzy-panel" hidden>
+                    Check out our portfolio.
+                </div>
             </div>
-            <div id="slide2" class="tabzy-panel" hidden>
-                About us and our mission.
-            </div>
-            <div id="slide3" class="tabzy-panel" hidden>
-                Our services in detail.
-            </div>
-            <div id="slide4" class="tabzy-panel" hidden>
-                Check out our portfolio.
-            </div>
-        </div>
+        </div> 
 
         <h2 data-bullet="2" class="title" id="installation">
             Installation
